Fix scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #888;
 }
+
+html {
+  overflow: hidden;
+}
